# optimization-algorithms

./: README.md  pyproject.toml
ch2_a_deeper_look_at_search_and_optimization/: maximizing_profit_lagrange_multiplier.py  n_queens_or_tools.py
ch5_simulated_annealing/: continuous_function_optimization.py  sa_algorithm.py
